--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 .mainpage {
     width: 100vw;
     height: 100vh;
-    background-image: url(images/mainBG1.jpg);
+    background-image: url(mainBG1.jpg);
     background-position: center;
     background-size: cover;
     display: flex;
